--- a/Downloader/Downloader.csproj
+++ b/Downloader/Downloader.csproj
@@ -121,5 +121,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="resources\Strings.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
