--- a/Downloader/Downloader.csproj
+++ b/Downloader/Downloader.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DownloadManager.cs" />
+    <Compile Include="FileMetadata.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
